<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:targetApi="o">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/TimeA"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pontoTimeA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/pontosA"
                        android:textColor="@color/colorPrimary"
                        android:textSize="56sp" />

                    <TextView
                        android:id="@+id/cortadA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/pontoTimeA"
                        android:layout_toEndOf="@id/pontoTimeA"
                        android:layout_toRightOf="@id/pontoTimeA"
                        android:text="@string/cortA"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />

                </RelativeLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:minHeight="50dp"
                    android:minWidth="110dp"
                    android:onClick="addPontosA"
                    android:text="@string/points" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:minWidth="110dp"
                    android:onClick="addCortadaA"
                    android:text="@string/cortadas" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:targetApi="o">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/TimeB"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pontoTimeB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/pontosA"
                        android:textColor="@color/colorPrimary"
                        android:textSize="56sp" />

                    <TextView
                        android:id="@+id/cortadB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/pontoTimeB"
                        android:layout_toEndOf="@id/pontoTimeB"
                        android:layout_toRightOf="@id/pontoTimeB"
                        android:text="@string/cortA"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />

                </RelativeLayout>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:minHeight="50dp"
                    android:minWidth="110dp"
                    android:onClick="addPontosB"
                    android:text="@string/points" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:minWidth="110dp"
                    android:onClick="addCortadaB"
                    android:text="@string/cortadas" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/set"
            android:textColor="@color/colorPrimary"
            android:textSize="56sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:minHeight="50dp"
            android:minWidth="110dp"
            android:onClick="addSet"
            android:text="@string/setButton"
            tools:targetApi="o" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="110dp"
            android:onClick="reset"
            android:text="@string/reset" />

    </LinearLayout>
</RelativeLayout>
